--- a/src/psolar_docking/CMakeLists.txt
+++ b/src/psolar_docking/CMakeLists.txt
@@ -7,9 +7,37 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(apriltag_ros REQUIRED)
+find_package(apriltag_msgs REQUIRED)
+find_package(image_proc REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+
+
+add_executable(detected_dock_pose_publisher src/detected_dock_pose_publisher.cpp)
+ament_target_dependencies(detected_dock_pose_publisher
+  rclcpp
+  geometry_msgs
+  tf2_ros
+)
+
+install(TARGETS
+  detected_dock_pose_publisher
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+# Copy necessary files to designated locations in the project
+install (
+  DIRECTORY config launch
+  DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
